--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "ts-node ./server.ts"
+    "dev": "ts-node ./server.ts",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +17,14 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "typescript": "^4.5.4",
-    "ts-node": "^10.4.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^16.11.7",
-    "@types/express": "^4.17.13"
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
