--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "tsc": "tsc"
+    "tsc": "tsc   --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.5",
