--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node ./server.ts",
+    "tsc": "tsc --noEmit",
     "lint": "eslint . --ext .ts"
   },
   "keywords": [],
