test: test github worflow #6

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,12 +1,6 @@
 name: Build Backend (Server)
 
-on:
-  pull_request:
-    branches:
-      - main
-  push:
-    branches:
-      - main
+on: [push]
 jobs:
   build-backend:
     runs-on: ubuntu-latest
