--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,12 +1,6 @@
 name: Build Frontend (Client)
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push]
 
 jobs:
   build-frontend:
