--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "tsc": "tsc   --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-radio-group": "^1.2.3",
