--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
     "tsc": "tsc   --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
@@ -30,6 +33,7 @@
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
     "react-wrap-balancer": "^1.1.1",
@@ -38,6 +42,7 @@
     "tailwindcss": "^4.0.8",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
