--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
