--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "commonjs",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "npx tsx src/index.ts",
+    "dev": "NODE_ENV=development npx tsx src/index.ts",
     "build": "rm -rf dist && npx tsc",
     "start": "node dist/index.js",
     "lint": "echo 'skip'",
@@ -18,7 +18,8 @@
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -26,9 +27,12 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.10",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
+    "i": "^0.3.7",
+    "npm": "^11.1.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.25.0"
   }
