--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.477.0",
     "motion": "^12.4.7",
+    "next-themes": "^0.4.4",
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -41,6 +42,7 @@
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
     "react-wrap-balancer": "^1.1.1",
+    "sonner": "^2.0.1",
     "swiper": "^11.2.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
