--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
