--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,13 @@
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "stripe": "^17.7.0"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.10",
+    "@types/nodemailer": "^6.4.17",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "i": "^0.3.7",
