--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.8",
     "@tanstack/react-query": "^5.66.11",
+    "@tanstack/react-query-devtools": "^5.67.2",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
