--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,9 @@
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
+    "pino": "^9.6.0",
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0",
     "stripe": "^17.7.0"
   },
   "devDependencies": {
