--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
     "react-wrap-balancer": "^1.1.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "swiper": "^11.2.4",
     "tailwind-merge": "^3.0.2",
