--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite & npx react-scan@latest localhost:5173 ",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
