enhance: setup e2e testing with playwright

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 client/.gitignore
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+node_modules
+.env
+.env.local
