--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/leaflet": "^1.9.16",
+    "@types/node": "^22.13.10",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
