--- a/websocket/package.json
+++ b/websocket/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "mongoose": "^8.12.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "typescript": "^5.8.2"
   }
 }
