--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@playwright/test": "^1.51.1",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.8",
