--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -57,7 +57,7 @@ jobs:
       # - name: Start MongoDB
       #   uses: supercharge/mongodb-github-action@1.10.0
       #   with:
-      #     mongodb-version: '6.0'
+      #     mongodb-version: "6.0"
 
       # Start all services in correct order with health checks
       - name: Start backend services
