feat: make the admin dashboard better

--- a/infrastructure/manifests/backend/Deployment.yml
+++ b/infrastructure/manifests/backend/Deployment.yml
@@ -1,9 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend-deployment
+  name: backend-deployment
+  labels:
+    app: backend
 spec:
-  replicas: 2
+  replicas: 3
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -11,23 +13,23 @@ spec:
       maxSurge: 1
   selector:
     matchLabels:
-      app: frontend
+      app: backend
   template:
     metadata:
       labels:
-        app: frontend
+        app: backend
     spec:
       containers:
-        - name: frontend
-          image: baseless060907/apple-clone-client:latest
+        - name: backend
+          image: baseless060907/apple-clone-server:latest
           resources:
             limits:
               memory: "128Mi"
               cpu: "500m"
           ports:
-            - containerPort: 3000
+            - containerPort: 5000
           envFrom:
             - configMapRef:
-                name: frontend-configmap
+                name: backend-configmap
             - secretRef:
-                name: frontend-secret
+                name: backend-secret
