--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,13 @@
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -37,7 +39,7 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.477.0",
+    "lucide-react": "^0.483.0",
     "motion": "^12.4.7",
     "next-themes": "^0.4.4",
     "path": "^0.12.7",
@@ -48,6 +50,7 @@
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
     "react-wrap-balancer": "^1.1.1",
+    "recharts": "^2.15.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "swiper": "^11.2.4",
