--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -33,9 +35,11 @@
     "@tailwindcss/vite": "^4.0.8",
     "@tanstack/react-query": "^5.66.11",
     "@tanstack/react-query-devtools": "^5.67.2",
+    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
     "leaflet": "^1.9.4",
