--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
     "react-router-dom": "^7.2.0",
     "react-wrap-balancer": "^1.1.1",
     "recharts": "^2.15.1",
+    "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "swiper": "^11.2.4",
