--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^2.6.0",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -28,6 +28,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.0",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
@@ -42,6 +44,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.10",
     "@types/nodemailer": "^6.4.17",
     "eslint": "^9.21.0",
