--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@fingerprintjs/fingerprintjs": "^4.6.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -41,6 +42,7 @@
     "@tanstack/react-query-devtools": "^5.67.2",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.2",
+    "bowser": "^2.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
