--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
     "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
     "react-wrap-balancer": "^1.1.1",
