--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "scan": "vite & npx react-scan@latest localhost:5173 ",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "vite preview --host 0.0.0.0",
     "tsc": "tsc   --noEmit"
   },
   "dependencies": {
