--- a/infrastructure/manifests/client/Deployment.yml
+++ b/infrastructure/manifests/client/Deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend-deployment
+  name: frontend
   labels:
     app: frontend
 spec:
@@ -27,7 +27,7 @@ spec:
               memory: "128Mi"
               cpu: "500m"
           ports:
-            - containerPort: 3000
+            - containerPort: 4173
           envFrom:
             - configMapRef:
                 name: frontend-configmap
