--- a/infrastructure/manifests/client/Service.yml
+++ b/infrastructure/manifests/client/Service.yml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: frontend
 spec:
+  type: NodePort
   selector:
     app: frontend
   ports:
     - port: 3000
-      targetPort: 3000
-  type: ClusterIP
+      protocol: TCP
+      targetPort: 4173
+      nodePort: 30001
