--- a/infrastructure/manifests/server/Service.yml
+++ b/infrastructure/manifests/server/Service.yml
@@ -5,7 +5,8 @@ metadata:
 spec:
   selector:
     app: backend
+  type: ClusterIP
   ports:
     - port: 5000
       targetPort: 5000
-  type: ClusterIP
+      protocol: TCP
