--- a/infrastructure/manifests/websocket/Service.yml
+++ b/infrastructure/manifests/websocket/Service.yml
@@ -5,7 +5,8 @@ metadata:
 spec:
   selector:
     app: websocket
+  type: ClusterIP
   ports:
     - port: 3001
       targetPort: 3001
-  type: ClusterIP
+      protocol: TCP
