--- a/infrastructure/manifests/Ingress.yml
+++ b/infrastructure/manifests/Ingress.yml
@@ -32,6 +32,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/secure-backends: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
     - host: test.local
