--- a/infrastructure/manifests/Ingress.yml
+++ b/infrastructure/manifests/Ingress.yml
@@ -1,4 +1,3 @@
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -10,6 +9,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/secure-backends: "true"
+    nginx.ingress.kubernetes.io/health-check-path: /healthz
 spec:
   rules:
     - host: test.local
