--- a/infrastructure/manifests/client/Deployment.yml
+++ b/infrastructure/manifests/client/Deployment.yml
@@ -26,6 +26,9 @@ spec:
             limits:
               memory: "128Mi"
               cpu: "500m"
+            requests:
+              memory: "128Mi"
+              cpu: "250m"
           ports:
             - containerPort: 3000
           envFrom:
