--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "NODE_ENV=development npx tsx src/index.ts",
-    "build": "rm -rf dist && npx tsc",
+    "build": "rm -rf dist && npx tsc && npm run copy:views",
+    "copy:views": "copyfiles -u 1 \"src/views/**/*\" dist/",
     "start": "node dist/index.js",
     "lint": "echo 'skip'",
     "tsc": "echo 'skip'"
@@ -47,6 +48,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.10",
     "@types/nodemailer": "^6.4.17",
+    "copyfiles": "^2.4.1",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "i": "^0.3.7",
